@startuml
'https://plantuml.com/class-diagram

abstract class Person {
    id
    name
    email
    phone
}
class Borrower {
    positionId
}
class Author

class Book {
    id
    title
    category
    available
}


class Loan {
    id
    borrowerId
    bookId
    timeBorrow
    timeReturn
}

class Position {
    id
    title
    length
    number
}

class Librarian {
    id
    username
    password
    name
}

Person <|-r- Borrower
Person <|-l- Author

Author }|--|{ Book

Loan }|-u-|| Borrower
Loan }|-l-|| Book

Borrower }|-|| Position

@enduml